# trustbit_school_book_seller

./: INSTALLATION.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
trustbit_school_book_seller/: hooks.py  install.py  modules.txt  patches.txt
trustbit_school_book_seller/doctype/book_class_detail/: book_class_detail.json  book_class_detail.py
trustbit_school_book_seller/doctype/book_creation_log/: book_creation_log.json  book_creation_log.py
trustbit_school_book_seller/doctype/book_item_creator/: book_item_creator.json  book_item_creator.py
trustbit_school_book_seller/doctype/class_master/: class_master.json  class_master.py
trustbit_school_book_seller/doctype/publication/: publication.json  publication.py
trustbit_school_book_seller/doctype/subject/: subject.json  subject.py
trustbit_school_book_seller/fixtures/: class_master.json  subject.json
trustbit_school_book_seller/public/js/: book_item_creator.js
trustbit_school_book_seller/trustbit_school_book/doctype/book_class_detail/: book_class_detail.json  book_class_detail.py
trustbit_school_book_seller/trustbit_school_book/doctype/book_creation_log/: book_creation_log.json  book_creation_log.py
trustbit_school_book_seller/trustbit_school_book/doctype/book_item_creator/: book_item_creator.json  book_item_creator.py
trustbit_school_book_seller/trustbit_school_book/doctype/class_master/: class_master.json  class_master.py
trustbit_school_book_seller/trustbit_school_book/workspace/: trustbit_school_book.json
(+11 files in other folders)
