[project]
name = "trustbit_school_book_seller"
authors = [
    { name = "Trustbit", email = "info@trustbit.com"}
]
description = "Advanced Item Creation System for School Book Shops"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
erpnext = ">=14.0.0"
frappe = ">=14.0.0"
