[project]
name = "trustbit_school_book_seller"
authors = [
    { name = "Trustbit", email = "info@trustbit.in"}
]
description = "School Book Seller App for ERPNext - Bulk Book Item Creation"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
frappe = "https://github.com/frappe/frappe"
erpnext = "https://github.com/frappe/erpnext"
